Fix CSS for default button width, helps reduce flicker when swapping between forms in the start workflow page.
git-svn-id: https://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@21350 7033f55c-6c29-4ad8-afba-765cb616e738

--- a/root/projects/web-framework-commons/source/web/components/form/form.css
+++ b/root/projects/web-framework-commons/source/web/components/form/form.css
@@ -33,7 +33,17 @@
    width: 30em;
 }
 
-.form-container input[type="checkbox"]
+.form-container input[type="checkbox"] 
+{
+   width: auto;
+}
+
+.form-container input[type="button"]
+{
+   width: auto;
+}
+
+.form-container input[type="submit"]
 {
    width: auto;
 }
